:art: made test import excel files and not separate txt files